--- a/public/learn-kubernetes-security/index.html
+++ b/public/learn-kubernetes-security/index.html
@@ -194,7 +194,10 @@ audio {
 <br>
 
 
-<p>Comme j&rsquo;ai lu le livre devant mon ordinateur et non sur mon téléphone, mes notes sont différente que des <strong>Highlights</strong>.</p>
+<p><strong>Comme j&rsquo;ai lu le livre devant mon ordinateur et non sur mon téléphone, ce ne sont pas des highlights, mais des notes durant ma lecture.</strong></p>
+<p><br><br><br></p>
+<hr>
+<h1 id="chapitre-1">Chapitre 1.</h1>
 <p>Kube réponds aux scaling, cout et les délais des cycle de déploiement. L&rsquo;explosion des microservice amene une complexité aux devOps. différents language et interpreteur. différents packages, différentes config. C&rsquo;est la que docker règle bien des problèmes. Docker Swarm est renommé Docker Enterprise Edition. Comme Conteneur orchestration Kubernetes represente 77% du marché. Par rapport a OpenShift (9%), Swarm (5%), Mesos (4%).</p>
 <p>Il y a deux types de nodes: Master et worker nodes. Le control plane (Kube-APIserver) roule sur le master nodes. Les worker sont des Kubelet.</p>
 <p><img src="MasterAndWorknode.png" alt="MasterAndWorknode"></p>
