Adding Psychology of Money

--- a/public/kubernetes-hardening-guide/index.html
+++ b/public/kubernetes-hardening-guide/index.html
@@ -164,7 +164,7 @@ audio {
 <div class="card mb-3 border-0">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="cover.png" class="card-img">
+      <img src="cover.jpg" class="card-img">
     </div>
     <div class="col-md-8">
       <div class="card-body">
